test/corpus/type.txt
=====
nat type
=====

let x: Nat = 0;

---

(source_file
	(let (pattern (identifier) type: (primitive_type)) value: (int_literal)))

=====
nat type bin
=====

let x: Nat = 0b1011;

---

(source_file
	(let (pattern (identifier) type: (primitive_type)) value: (int_literal)))

=====
nat type nex
=====

let x: Nat = 0xaff0;

---

(source_file
	(let (pattern (identifier) type: (primitive_type)) value: (int_literal)))

=====
idx type
=====

let x: Idx 8 = 0;

=====
function type
=====

let x: Nat -> Nat = 0;

---

(source_file
	(let
		(pattern (identifier)
			type: (function_type (primitive_type) (primitive_type)))
		value: (int_literal)))

=====
array type
=====

let x: <<2; Nat>> = 0;

---

(source_file
	(let
		(pattern
			(identifier)
			type: (array_type size: (int_literal) type: (primitive_type)))
		value: (int_literal)))

=====
function array type
=====

let x: <<2; Nat>> -> «3; Bool» = 0;

---

(source_file
	(let
		(pattern (identifier)
			type: (function_type
				(array_type size: (int_literal) type: (primitive_type))
				(array_type size: (int_literal) type: (primitive_type))))
		value: (int_literal)))

=====
nested function type
=====

let x: Nat -> Idx 8 -> * = 0;

---

(source_file
	(let
		(pattern (identifier)
			type: (function_type
				(primitive_type)
				(function_type
					(primitive_type
						(int_literal))
					(primitive_type))))
		value: (int_literal)))

=====
dependent type
=====

let x: [s: Nat] -> Idx s = 0;

---

(source_file
	(let
		(pattern (identifier)
			type: (function_type
				(pattern (pattern (identifier) type: (primitive_type)))
				(primitive_type (identifier))))
		value: (int_literal)))

=====
declaration in codomain
=====

let x: [R: Ring] -> let a = 3; <<a; Nat>> = 0;

---

(source_file
	(let
		(pattern (identifier)
			type: (function_type
				(pattern (pattern (identifier) type: (identifier)))
				(block
					(let (pattern (identifier)) value: (int_literal))
					(array_type
						size: (identifier)
						type: (primitive_type)))))
		value: (int_literal)))
